--- a/public/style.scss
+++ b/public/style.scss
@@ -33,6 +33,8 @@ body {
   font-size: 15vw;
   user-select: none;
   flex-wrap: nowrap;
+  transform: translateZ(0); /* サブピクセルレンダリング対策 */
+  -webkit-font-smoothing: antialiased; /* アンチエイリアスの適用 */
 }
 
 span{
