--- a/public/style.css
+++ b/public/style.css
@@ -91,9 +91,10 @@ span {
   background-color: #b9b9b9;
   position: absolute;
   display: none;
-  top: 60vh;
+  overflow: auto;
+  top: 50vh;
   width: 70vw;
-  height: 35vh;
+  height: 50vh;
 }
 
 h4 {
@@ -101,7 +102,9 @@ h4 {
 }
 
 .setting_content {
-  padding-left: 5%;
+  padding-left: 5vw;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
 #set_room_url_txt {
